  and processed before all other options. Inter-option dependencies
  have been relieved. Among others, permits to specify intial module
  load path via -M only (not the environment) which makes it much
  easier to work with non-standard module library locations. Thanks
  to varmojfekoj for suggesting this change. Matches bugzilla bug 55.
---------------------------------------------------------------------------
Version 3.15.1 (rgerhards), 2008-04-??
- disabled atomic operations for the time being because they introduce some
  cross-platform trouble - need to see how to fix this in the best 
  possible way
- added librelp check via PKG_CHECK thanks to Michael Biebl's patch
- file relputil.c deleted, is not actually needed
- added more meaningful error messages to rsyslogd (when some errors
  happens during startup)
---------------------------------------------------------------------------
Version 3.15.0 (rgerhards), 2008-04-01
- major new feature: imrelp/omrelp support reliable delivery of syslog
  messages via the RELP protocol and librelp (http://www.librelp.com).
  Plain tcp syslog, so far the best reliability solution, can lose
  messages when something goes wrong or a peer goes down. With RELP,
  this can no longer happen. See imrelp.html for more details.
- bugfix: rsyslogd was no longer build by default; man pages are 
  only installed if corresponding option is selected. Thanks to
  Michael Biebl for pointing these problems out.
---------------------------------------------------------------------------
Version 3.14.0 (rgerhards), 2008-04-02
- bugfix: rsyslogd was no longer build by default; man pages are 
  only installed if corresponding option is selected. Thanks to
  Michael Biebl for pointing these problems out.
- disabled atomic operations for this stable build as it caused
  platform problems
---------------------------------------------------------------------------
Version 3.13.0-dev0 (rgerhards), 2008-03-31